force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Document_Store__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field auto-populates and is required. This field associates the Document Store record where the file is held.</description>
    <label>Document Store</label>
    <referenceTo>LLC_BI__Document_Store__c</referenceTo>
    <relationshipLabel>Document Versions</relationshipLabel>
    <relationshipName>Document_Version_Store_Indices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>