force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__External_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Preview_URL__c</fullName>
    <description>An automatically populated full-preview link for a file hosted on external storage (if available).</description>
    <label>External Preview URL</label>
    <type>Url</type>
</CustomField>