force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Offloaded_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Offloaded_Date__c</fullName>
    <description>An automatically populated time stamp on the document version record specifying the last time a document (and its associated metadata) was offloaded to external storage.</description>
    <label>Offloaded Date</label>
    <type>DateTime</type>
</CustomField>