force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Published__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Published__c</fullName>
    <description>An automatically populated indicator on the document version record specifying the document has been successfully published to external storage.</description>
    <formula>IF(ISNULL(LLC_BI__Published_Date__c), false, true)</formula>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>