force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Ready_For_Offload__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ready_For_Offload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An automatically populated indicator on the document version record specifying that a document has met the criteria for offload to external storage.</description>
    <label>Ready for Offload</label>
    <type>Checkbox</type>
</CustomField>