force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Storage_Type__c</fullName>
    <description>Administrators populate this optional picklist to indicate where the document is stored. By default, it is blank.</description>
    <inlineHelpText>Select the storage type to indicate where the document is stored.</inlineHelpText>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Document</fullName>
            </value>
            <value>
                <fullName>Internal Document</fullName>
            </value>
            <value>
                <fullName>Offline Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>